# open_manipulator

./: README.md
install/: install (kopie).bash  install.bash
open_manipulator/open_manipulator_controller/launch/: open_manipulator_controller.launch
open_manipulator/open_manipulator_controller/src/: open_manipulator_controller.cpp
open_manipulator/open_manipulator_description/launch/: open_manipulator_rviz.launch
open_manipulator/open_manipulator_description/urdf/: open_manipulator.urdf.xacro  open_manipulator_robot.urdf.xacro
open_manipulator_controls/open_manipulator_controllers/launch/: joint_trajectory_controller.launch
open_manipulator_controls/open_manipulator_hw/src/: hardware_interface.cpp
open_manipulator_controls/open_manipulator_moveit_config/: package.xml
open_manipulator_controls/open_manipulator_moveit_config/config/: open_manipulator.srdf
open_manipulator_controls/open_manipulator_moveit_config/launch/: default_warehouse_db.launch  demo.launch  demo_gazebo.launch  move_group.launch  moveit_rviz.launch  planning_context.launch  warehouse.launch
open_manipulator_freedrive/: CMakeLists.txt  package.xml
open_manipulator_freedrive/include/open_manipulator_freedrive/: open_manipulator_freedrive.h
open_manipulator_freedrive/launch/: open_manipulator_freedrive.launch
open_manipulator_freedrive/src/: open_manipulator_freedrive.cpp
open_manipulator_ikfast_plugin-main/src/: open_manipulator_ikfast_moveit_plugin.cpp
